--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Energix · Dashboard</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <title>Frontend Energix</title>
 </head>
 <body>
 <div id="app"></div>
